force-app/main/default/objects/DNBoptimizer__DnBExternalContactRecord__x/DNBoptimizer__DnBExternalContactRecord__x.object-meta.xml
<CustomObject>
    <externalDataSource>DNBoptimizer__DnB_Contact</externalDataSource>
    <externalName>DnB_ContactExternalObject</externalName>
    <label>D&amp;B External Contact Record</label>
    <pluralLabel>D&amp;B External Contact Records</pluralLabel>
</CustomObject>