force-app/main/default/objects/DNBoptimizer__DnBExternalContactRecord__x/fields/DNBoptimizer__baseDataId__c.field-meta.xml
<CustomField>
    <fullName>DNBoptimizer__baseDataId__c</fullName>
    <description>base data id</description>
    <label>Base Data ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>