force-app/main/default/objects/DNBoptimizer__DnBExternalContactRecord__x/fields/DNBoptimizer__BusinessName__c.field-meta.xml
<CustomField>
    <fullName>DNBoptimizer__BusinessName__c</fullName>
    <description>The single name by which the entity is primarily known or identified.</description>
    <inlineHelpText>The single name by which the entity is primarily known or identified.</inlineHelpText>
    <label>Business Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>