force-app/main/default/objects/DNBoptimizer__DnBExternalContactRecord__x/fields/DNBoptimizer__City__c.field-meta.xml
<CustomField>
    <fullName>DNBoptimizer__City__c</fullName>
    <description>The name of the city, town, township, village, borough, etc. in which this address is located.</description>
    <inlineHelpText>The name of the city, town, township, village, borough, etc. in which this address is located.</inlineHelpText>
    <label>Primary Address City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>