force-app/main/default/objects/DNBoptimizer__DnBExternalContactRecord__x/fields/DNBoptimizer__ContactID__c.field-meta.xml
<CustomField>
    <fullName>DNBoptimizer__ContactID__c</fullName>
    <description>An identification number that uniquely defines a D&amp;B contact.</description>
    <inlineHelpText>An identification number that uniquely defines a D&amp;B contact.</inlineHelpText>
    <label>D&amp;B Contact ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>