force-app/main/default/objects/DNBoptimizer__DnBExternalContactRecord__x/fields/DNBoptimizer__Email__c.field-meta.xml
<CustomField>
    <fullName>DNBoptimizer__Email__c</fullName>
    <description>The email address of the contact.</description>
    <inlineHelpText>The email address of the contact.</inlineHelpText>
    <label>Email</label>
    <length>80</length>
    <type>Text</type>
</CustomField>