force-app/main/default/objects/DNBoptimizer__DnBExternalContactRecord__x/fields/DNBoptimizer__EmailDeliverabilityScore__c.field-meta.xml
<CustomField>
    <fullName>DNBoptimizer__EmailDeliverabilityScore__c</fullName>
    <description>The predicted probability that a contact can be reached by the email listed for the contact, at the time of the most recent email verification.</description>
    <inlineHelpText>The predicted probability that a contact can be reached by the email listed for the contact, at the time of the most recent email verification.</inlineHelpText>
    <label>Email Deliverability Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>