force-app/main/default/objects/DNBoptimizer__DnBExternalContactRecord__x/fields/DNBoptimizer__FirstName__c.field-meta.xml
<CustomField>
    <fullName>DNBoptimizer__FirstName__c</fullName>
    <description>The given name of the individual.</description>
    <inlineHelpText>The given name of the individual.</inlineHelpText>
    <label>First Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>