force-app/main/default/objects/DNBoptimizer__DnBExternalContactRecord__x/fields/DNBoptimizer__JobTitle__c.field-meta.xml
<CustomField>
    <fullName>DNBoptimizer__JobTitle__c</fullName>
    <description>The job held by the entity.</description>
    <inlineHelpText>The job held by the entity.</inlineHelpText>
    <label>Job Title</label>
    <length>200</length>
    <type>Text</type>
</CustomField>