force-app/main/default/objects/DNBoptimizer__DnBExternalContactRecord__x/fields/DNBoptimizer__LastName__c.field-meta.xml
<CustomField>
    <fullName>DNBoptimizer__LastName__c</fullName>
    <description>The family name of the individual.</description>
    <inlineHelpText>The family name of the individual.</inlineHelpText>
    <label>Last Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>