force-app/main/default/objects/DNBoptimizer__DnBExternalContactRecord__x/fields/DNBoptimizer__NameSuffix__c.field-meta.xml
<CustomField>
    <fullName>DNBoptimizer__NameSuffix__c</fullName>
    <description>The familial or professional suffix to the individual&apos;s name.</description>
    <inlineHelpText>The familial or professional suffix to the individual&apos;s name.</inlineHelpText>
    <label>Suffix</label>
    <length>30</length>
    <type>Text</type>
</CustomField>