force-app/main/default/objects/DNBoptimizer__DnBExternalContactRecord__x/fields/DNBoptimizer__PhoneAccuracyScore__c.field-meta.xml
<CustomField>
    <fullName>DNBoptimizer__PhoneAccuracyScore__c</fullName>
    <description>The predicted probability (from 0 to 100) that a contact can be reached at least one of their listed phone numbers, at the time of the most recent phone verification. Decays at a rate of 2 points each month.</description>
    <inlineHelpText>The predicted probability (from 0 to 100) that a contact can be reached at least one of their listed phone numbers, at the time of the most recent phone verification. Decays at a rate of 2 points each month.</inlineHelpText>
    <label>Phone Accuracy Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>