force-app/main/default/objects/DNBoptimizer__DnBExternalContactRecord__x/fields/DNBoptimizer__SIC4Desc1__c.field-meta.xml
<CustomField>
    <fullName>DNBoptimizer__SIC4Desc1__c</fullName>
    <description>The business activity based on the scheme used for the industry code (e.g., &apos;highway and street construction&apos; is the description of industry code 1611 in the U.S. SIC (Standard Industrial Classification) system).</description>
    <inlineHelpText>The business activity based on the scheme used for the industry code (e.g., &apos;highway and street construction&apos; is the description of industry code 1611 in the U.S. SIC (Standard Industrial Classification) system).</inlineHelpText>
    <label>SIC4 Code 1 Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>