force-app/main/default/objects/DNBoptimizer__DnBExternalContactRecord__x/fields/DNBoptimizer__StateProvince__c.field-meta.xml
<CustomField>
    <fullName>DNBoptimizer__StateProvince__c</fullName>
    <description>The name of the locally governed area that forms part of a centrally governed nation to identify where this address is located.</description>
    <inlineHelpText>The name of the locally governed area that forms part of a centrally governed nation to identify where this address is located.</inlineHelpText>
    <label>Primary Address State Province</label>
    <length>255</length>
    <type>Text</type>
</CustomField>