force-app/main/default/objects/DNBoptimizer__DnBExternalContactRecord__x/fields/DNBoptimizer__StateProvinceAbbrev__c.field-meta.xml
<CustomField>
    <fullName>DNBoptimizer__StateProvinceAbbrev__c</fullName>
    <description>The shortened name of the locally governed area that forms part of a centrally governed nation. For example &apos;NJ&apos; for the US State New Jersey within Country United States.</description>
    <inlineHelpText>The shortened name of the locally governed area that forms part of a centrally governed nation. For example &apos;NJ&apos; for the US State New Jersey within Country United States.</inlineHelpText>
    <label>Primary Address State Province Abbrev</label>
    <length>255</length>
    <type>Text</type>
</CustomField>